--- a/trial.html
+++ b/trial.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url="https://ajay-xportia.github.io/APIDocs/openapi.yaml"></redoc>
+    <redoc spec-url="https://github.com/routemobile/Viber-Business-Messages-API/blob/master/openapi.yaml"></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
